Add microphone button functionality and sound files

--- a/index.html
+++ b/index.html
@@ -44,12 +44,21 @@
             id="user-input"
             required
           />
+          <button id="microphone-btn" class="microphone-btn">
+            <img src="images/microphone.png" class="microphone-icon" />
+          </button>
           <button id="submit-btn" class="submit-btn">
             <img src="images/send-btn-icon.png" class="send-btn-icon" />
           </button>
         </div>
       </section>
     </main>
+    <audio id="mic-sound">
+      <source src="audios/mic-sound.wav" type="audio/mpeg" />
+    </audio>
+    <audio id="mic-stop-sound">
+      <source src="audios/mic-stop.wav" type="audio/mpeg" />
+    </audio>
     <script type="module" src="index.js"></script>
   </body>
 </html>
