Adjust microphone button width and update placeholder text in index.css and index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <input
             name="user-input"
             type="text"
-            placeholder="Type your message or click the microphone"
+            placeholder="Send your message"
             id="user-input"
             required
           />
