Adjust microphone button width and add @vercel/analytics package

--- a/index.html
+++ b/index.html
@@ -62,5 +62,13 @@
       <source src="audios/mic-stop.wav" type="audio/mpeg" />
     </audio>
     <script type="module" src="index.js"></script>
+    <script>
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
