Update chatbot UI, adjust microphone button styling and add OpenAI package

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             Hey there! Welcome to MIET Jammu's virtual assistant. <br />
             How can I assist you today?
           </div>
+          <div
+            class="chatbot-prompts-container"
+            id="chatbot-prompts-container"
+          ></div>
+          <!-- Container for suggestive prompts -->
         </div>
         <div class="chatbot-input-container">
           <input
