--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             Hey there! Welcome to MIET Jammu's virtual assistant. <br />
             How can I assist you today?
           </div>
+        </div>
+        <div class="chatbot-input-container">
           <div
             class="chatbot-prompts-container"
             id="chatbot-prompts-container"
@@ -51,6 +53,7 @@
             id="user-input"
             required
           />
+
           <button id="microphone-btn" class="microphone-btn">
             <img src="images/microphone.png" class="microphone-icon" />
           </button>
