Update chatbot UI, adjust microphone button styling and add OpenAI package

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
           </div>
         </div>
         <div class="chatbot-input-container">
+          <div id="suggestion-container" class="suggestion-container"></div>
+          <!-- Suggestion container -->
           <input
             name="user-input"
             type="text"
