Update chatbot UI, adjust microphone button styling and add OpenAI package

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             How can I assist you today?
           </div>
         </div>
+        <!-- <div
+          class="chatbot-prompts-container"
+          id="chatbot-prompts-container"
+        ></div> -->
         <div class="chatbot-input-container">
           <input
             name="user-input"
