Refactor chatbot UI, update welcome message

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="chatbot-conversation" id="chatbot-conversation">
           <div class="speech speech-ai">
-            Hey there! Welcome to MIET Jammu's virtual assistant. <br />
+            Hey there! Welcome to MIET virtual assistant. <br />
             How can I assist you today?
           </div>
         </div>
